# cartomap

./: LICENSE  README.md  example.py  example0_17.py  magcoords_v0.17.py  maginclination_v0.17.py  setup.cfg  setup.py  tecmov.py  tecplot.py
cartomap/: __init__.py  geogmap.py
